implement carousel slider

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -86,7 +86,7 @@ a.header-link:hover,
 
 .cart-badge {
     position: absolute;
-    color: #f08000;
+    color: #facf25;
     font-weight: bold;
     margin-left: 16px;
     margin-top: -3px;
