--- a/web/src/index.css
+++ b/web/src/index.css
@@ -133,3 +133,14 @@ a.header-link:hover,
 button.side-navbar-user:hover {
     color: white;
 }
+
+.footer {
+    background-color: #333;
+    color: #fff;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 9;
+}
